--- a/mojing/index.html
+++ b/mojing/index.html
@@ -1,29 +1,32 @@
 <!DOCTYPE HTML>
 <html lang="zh-CN">
     <head>
-        <link rel="stylesheet" href="./style.css">
-        <link rel="stylesheet" href="./response.css">
-
         <meta charset="utf-8">
-
-    </head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/response.css">        
+    </head> 
     <body>
         <div class="container">
-            <div class="arrows"></div>
-            
+            <div class="arrow">
+                <img src="./images/task3_03.png" alt="arrow">
+            </div>
             <div class="content">
                 <div class="logo"></div>
-                <p>葡萄藤轻游戏专注桌游邻域，提供在线杀人游戏，捉鬼，炸狼堡等多种游戏，以线下聚会桌游道具为主。</p>
+                <p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。</p>
+            </div>
+            <div class="btn">
+                <div class="left">
+                    <img src="./images/task3_11.png" alt="qun">
+                    <p>333333333</p>
+                </div>
+                <div class="right">
+                    <img src="./images/task3_13.png" alt="group">
+                    <p>BJPtteng</p>
+                </div>
             </div>
 
-            <div class="footer">
-                    <div class="crowd">33333333</div>
-
-                    <div class="ptteng">BJPTeng</div>
-            </div>
-           
         </div>
-
 
     </body>
 </html>
